# ncc

./: .gitignore  BACKLOG.md  README.md  pyproject.toml  requirements.txt
src/ncc/: TESTS.md  __init__.py
src/ncc/backup/: backup.py  clab_devices.json  devices.json.example  test.json
src/ncc/cli/: main.py
src/ncc/core/: config.py  logging.py
