[project]
name = "ncc"
version = "0.1.0"
description = "Network Command and Controle"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.2",
    "click>=8.3.1",
    "jinja2>=3.1.6",
    "napalm>=5.1.0",
    "netaddr>=1.3.0",
    "netmiko>=4.6.0",
    "nornir>=3.5.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "pysnmp>=7.1.22",
    "python-dotenv>=1.2.1",
    "pyyaml>=6.0.3",
    "rich>=14.3.1",
    "sqlalchemy>=2.0.46",
]

[project.scripts]
ncc = "ncc.cli.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ncc"]
